# Nomic

./: LICENSE  README.md  nomic.cabal  stack.yaml
src/: Main.hs
