name:                nomic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/TheEpsilonNeighborhoodWatch/Nomic#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Hyde, Eamon Olive
maintainer:          Louis Hyde, Eamon Olive
copyright:           (c) 2018 The Epsilon Neighborhood Watch
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nomic
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
